k8s/ingress-demo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mccss-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: mccss.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edenfield-admin
                port:
                  number: 8000
